--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "export": "next export"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
+    "clsx": "^1.1.1",
+    "fontsource-roboto": "^2.1.4",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
