--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "9.4.4",
     "next-optimized-images": "^2.6.2",
     "react": "16.13.1",
+    "react-countdown": "^2.2.1",
     "react-dom": "16.13.1",
     "responsive-loader": "^2.0.2",
     "sharp": "^0.25.4"
